--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,12 @@
   color: inherit;
   font: inherit;
   font-size: 2em;
-  margin: 0 4px;
+  /* margin: 0 4px; */
   padding: 8px;
   text-overflow: ellipsis;
+
+  max-width: 100%;
+  box-sizing:border-box;
 }
 
 #title:hover {
@@ -14,7 +17,7 @@
 }
 
 #title:focus {
-  outline: 2px dashed gray;
+  outline: 0;
 }
 
 #tempo {
@@ -28,11 +31,17 @@
   /* outline: 2px dashed gray; */
 }
 
+#footer {
+  background: #333333;
+}
+
 .App {
   /* text-align: center; */
   height: 100vh;
   display: flex;
   flex-direction: column;
+
+  font-family: Roboto;
 }
 
 .App-header {
@@ -40,24 +49,44 @@
 }
 
 .App-menu-bar {
-  background-color: #282828;
+  background-color: #333333;
   color: white;
-  padding: 8px 4px;
+  padding: 8px;
 }
 
 .menu-button {
+  /* background-color: #282828; */
   display: inline-block;
   /* background-color: red; */
   /* border: 1px solid gray; */
-  border-radius: 8px;
-  margin: 0 4px;
+  box-sizing: content-box;
+  /* border-radius: 8px; */
+  height: 2em;
+  line-height: 2em;
+  margin-left: 8px;
+  /* outline: 1px solid green; */
   padding: 8px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.menu-button:first-child {
+  margin: 0;
+}
+
+.menu-button label {
   cursor: pointer;
 }
 
 .menu-button:hover {
-  background-color: #444444;
+  background-color: #282828;
   /* border: 1px solid gray; */
+}
+
+.menu-button.disabled {
+  background-color: #282828;
+  /* box-shadow: 0 0 8px 0 black; */
+  cursor: default;
 }
 
 button {
