--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+
+
+button {
+  background-color: inherit;
+  border: 0;
+  color: inherit;
+  font: inherit;
+  padding: 0;
+}
+
 #title {
   border: 0;
   background-color: inherit;
@@ -79,20 +89,22 @@
 }
 
 .menu-button:hover {
-  background-color: #282828;
+  /* background-color: #282828; */
+  filter: brightness(1.2);
   /* border: 1px solid gray; */
 }
 
-.menu-button.disabled {
+.menu-button.static {
   background-color: #282828;
   /* box-shadow: 0 0 8px 0 black; */
   cursor: default;
+  filter: brightness(1);
 }
 
-button {
-  background-color: inherit;
-  border: 0;
-  color: inherit;
-  font: inherit;
-  padding: 0;
+.metronome.unmuted {
+  background: mediumseagreen;
 }
+
+/* .metronome.muted {
+  background: #282828;
+} */
