--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ button {
 .menu-button {
   /* background-color: #282828; */
   display: inline-block;
-  /* background-color: red; */
+  background-color: inherit;
   /* border: 1px solid gray; */
   box-sizing: content-box;
   /* border-radius: 8px; */
@@ -90,7 +90,7 @@ button {
 
 .menu-button:hover {
   /* background-color: #282828; */
-  filter: brightness(1.2);
+  filter: brightness(1.5);
   /* border: 1px solid gray; */
 }
 
